--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
     "php": ">=5.6.0"
   },
   "require-dev": {
+    "codeception/codeception": "~2.2.8"
   },
   "scripts": {
+    "test": "./vendor/bin/codecept run --no-interaction"
   },
   "config": {
     "preferred-install": "dist",
