--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "authors": [
     {
       "name": "ankurk91",
-      "homepage": "https://ankurk91.github.io/"
+      "homepage": "https://github.com/ankurk91/codeception-travis-ci-example"
     }
   ],
   "require": {
