Update deps, attempt 3
* Latest selenium standalone server
* Chrome headless env
* Firefox gekodriver instructions

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ $RECYCLE.BIN/
 # Folder config file
 [Dd]esktop.ini
 *.DS_store
-.DS_store?
+.DS_store
 
 
 # node packages
@@ -62,4 +62,4 @@ composer.phar
 
 # Project related
 /nohup.out
-codecept.phar
+*.phar
