--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,15 @@
 language: php
 
 # The platforms you wants to test on
+dist: trusty
 os:
   - linux
 
-#addons
+# Install google chrome latest stable
+addons:
+  apt:
+    packages:
+      - google-chrome-stable
 
 # git configs
 git:
@@ -26,7 +31,7 @@ matrix:
 
 
 # We don't want to run linux commands as super user
-#false means Travis will run this in a container
+# false means Travis will run this in a container
 sudo: false
 
 # Disable x-debug to speed up things
@@ -41,10 +46,18 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
+
   - echo "Download selenium-server-standalone jar file"
-  - wget -c -nc --retry-connrefused --tries=0 http://goo.gl/EoH85x -O selenium-server-standalone.jar
+  - wget -c -nc --retry-connrefused --tries=0 https://goo.gl/s4o9Vx -O selenium-server-standalone.jar
+
+  - echo "Download chrome driver and unzip it"
+  - wget -c -nc --retry-connrefused --tries=0 http://chromedriver.storage.googleapis.com/2.31/chromedriver_linux64.zip
+  - unzip -o -q chromedriver_linux64.zip
+
   - echo "Run selenium server - background process"
   - nohup bash -c "java -jar selenium-server-standalone.jar &" && sleep 1; cat nohup.out
+  - ls
+
   - echo "Run php in-built server - background process"
   - nohup bash -c "php -S localhost:8000 2>&1 -t app &" && sleep 1; cat nohup.out
 
