--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -6,50 +6,53 @@
 
 class_name: AcceptanceTester
 modules:
-    enabled:
-        #- PhpBrowser:
-        #    url: http://localhost:8000
-        - WebDriver
-        - \Helper\Acceptance
-    config:
-            WebDriver:
-                url: 'http://localhost:8000'
-                browser: 'chrome'
-                wait: 1 #seconds
+  enabled:
+    #- PhpBrowser:
+    #   url: http://localhost:8000
+    - WebDriver
+    - \Helper\Acceptance
+  config:
+    WebDriver:
+      browser: chrome
+      port: 4444
+      url: "http://localhost:8000"
+      wait: 1 # seconds
 
 # http://codeception.com/docs/07-AdvancedUsage
 env:
-    chrome-headless:
-         modules:
-            config:
-                WebDriver:
-                    browser: 'chrome'
-                    window_size: false
-                    capabilities:
-                      chromeOptions:
-                        args: ["--headless", "--disable-gpu", "window-size=1920x1080"]
+  chrome:
+    modules:
+      config:
+        WebDriver:
+          browser: chrome
 
+  chrome-headless:
+    modules:
+      config:
+        WebDriver:
+          browser: chrome
+          capabilities:
+            chromeOptions:
+              args:
+                - "--headless"
+                - "--disable-gpu"
+                - window-size=1920x1080
+          window_size: false
 
-    chrome:
-         modules:
-            config:
-                WebDriver:
-                    browser: 'chrome'
+  firefox:
+    modules:
+      config:
+        WebDriver:
+          browser: firefox
 
-    firefox:
-        modules:
-            config:
-                WebDriver:
-                   browser: 'firefox'
+  phantom:
+    modules:
+      config:
+        WebDriver:
+          browser: phantomjs
 
-    safari:
-        modules:
-            config:
-                WebDriver:
-                   browser: 'safari'
-
-    phantom:
-         modules:
-            config:
-                WebDriver:
-                    browser: 'phantomjs'
+  safari:
+    modules:
+      config:
+        WebDriver:
+          browser: safari
